filling out some functionality

--- a/UpGrade/src/main/webapp/HTML/EmpPortal/GradesPending.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/GradesPending.html
@@ -17,6 +17,7 @@
 	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 	crossorigin="anonymous"></script>
+	<script type="text/javascript" src="JS/Grades.js"></script>
 
 <title>Grades Submission and Pending Approval</title>
 </head>
@@ -57,7 +58,7 @@
 					<tr>
 						<th>ID</th>
 						<th>Event Name</th>
-						<th>Grade Submission</th>
+						<th>Grade Type</th>
 						<th>Supervisor Approval</th>
 						<th>BenCo Approval</th>
 					</tr>
