--- a/UpGrade/src/main/webapp/HTML/EmpPortal/Pending.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/Pending.html
@@ -70,6 +70,7 @@
 						<th>ID</th>
 						<th>Event Name</th>
 						<th>Cost</th>
+						<th>Projected Reimbursement</th>
 						<th>Dept. Head Approval</th>
 						<th>Supervisor Approval</th>
 						<th>BenCo Approval</th>
