--- a/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
@@ -45,8 +45,8 @@
 	<div class="row">
 		<h1 class="m-5">Employees with Requests Pending Approval</h1>
 	</div>
-	<div class="row ml-5">
-		<table class="table table-hover ml-5">
+	<div class="row d-flex justify-content-center mx-3">
+		<table class="table table-hover">
 			<thead>
 				<tr>
 					<th>Employee ID</th>
@@ -62,7 +62,7 @@
 		</table>
 	</div>
 	<div class="row">
-		<div class="col-md-6 d-flex justify-content-center">
+		<div class="col-md-8 d-flex justify-content-start ml-3">
 			<h4 class="mr-3 mt-5">Enter ID of Reimbursement to Approve:</h4>
 			<form method="post" action="bencoapprove.change" class="form-inline mt-5">
 				<input class="form-control mr-sm-2" type="text"
@@ -72,10 +72,10 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-6 d-flex justify-content-center">
+		<div class="col-md-8 d-flex justify-content-start ml-3">
 			<h4 class="mr-3 mt-5">Enter ID of Reimbursement to Deny:</h4>
 			<form method="post" action="bencodeny.change" class="form-inline mt-5">
-			<textarea class="form-control" name="denialReason" required>Denial Reason</textarea>
+			<textarea class="form-control mr-2" name="denialReason" required>Denial Reason</textarea>
 				<input class="form-control mr-sm-2" type="text"
 					placeholder="Reimbursement ID" name="rIDdeny" aria-label="Search">
 				<button class="btn btn-outline-danger my-2 my-sm-0">Deny</button>
